--- a/dashboard/admin/index.html
+++ b/dashboard/admin/index.html
@@ -44,76 +44,56 @@
                 </li>
             </ul>
         </nav>
-        <div id="layoutSidenav">
+         <div id="layoutSidenav">
             <div id="layoutSidenav_nav">
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
-                            <a class="nav-link" href="index.html">
+                            <a class="nav-link" href="../index.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
- <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseMaster" aria-expanded="false" aria-controls="collapseMaster">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseMaster" aria-expanded="false" aria-controls="collapseMaster">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Master Data
- <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
- <div class="collapse" id="collapseMaster" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
- <nav class="sb-sidenav-menu-nested nav">
-    <a class="nav-link" href="masterData/jadwal.html">Data Jadwal</a>
-    <a class="nav-link" href="masterData/guru.html">Data Guru</a>
-    <a class="nav-link" href="masterData/kelas.html">Data Kelas</a>
-    <a class="nav-link" href="siswa.html">Data Siswa</a>
-    <a class="nav-link" href="masterData/mapel.html">Data Mapel</a>
-    <a class="nav-link" href="#">Data Kurikulum</a>
-    <a class="nav-link" href="masterData/user.html">Data User</a>
- </nav>
- </div>
-                            <a class="nav-link collapsed" href="absensiGuru.html">
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+            <div class="collapse" id="collapseMaster" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                <nav class="sb-sidenav-menu-nested nav">
+                    <a class="nav-link" href="masterData/jadwal.html">Data Jadwal</a>
+                    <a class="nav-link" href="masterData/guru.html">Data Guru</a>
+                    <a class="nav-link" href="kelas.html">Data Kelas</a>
+                    <a class="nav-link" href="masterData/siswa.html">Data Siswa</a>
+                    <a class="nav-link" href="masterData/mapel.html">Data Mapel</a>
+                    <a class="nav-link" href="#">Data Kurikulum</a>
+                    <a class="nav-link" href="masterData/user.html">Data User</a>
+                </nav>
+            </div>
+                                <a class="nav-link collapsed" href="absensiGuru.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-calendar-alt"></i>
                                 </div>
                                 Absensi Guru
                             </a>
-
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Pages
+                                <div class="sb-nav-link-icon"><i class="fas fa-book"></i></div>
+                                Nilai
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
-                                        Authentication
-                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                    <a class="nav-link collapsed" href="nilai/n_ulangan.html">
+                                        Nilai Ulangan
                                     </a>
-                                    <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
-                                        <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="login.html">Login</a>
-                                            <a class="nav-link" href="register.html">Register</a>
-                                            <a class="nav-link" href="password.html">Forgot Password</a>
-                                        </nav>
-                                    </div>
-                                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
-                                        Error
-                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                    <a class="nav-link collapsed" href="nilai/n_rapor.html">
+                                        Nilai Rapor
+                                       
                                     </a>
-                                    <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
-                                        <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="401.html">401 Page</a>
-                                            <a class="nav-link" href="404.html">404 Page</a>
-                                            <a class="nav-link" href="500.html">500 Page</a>
-                                        </nav>
-                                    </div>
+                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading">Addons</div>
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="pengumuman.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Charts
-                            </a>
-                            <a class="nav-link" href="tables.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Tables
+                                Pengumuman
                             </a>
                         </div>
                     </div>
