--- a/dashboard/kepala_sekolah/l_akademik.html
+++ b/dashboard/kepala_sekolah/l_akademik.html
@@ -82,57 +82,103 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
-                        <h1 class="mt-4">Dashboard</h1>
-                        <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Dashboard</li>
-                        </ol>
-                        <div class="row">
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-primary text-white mb-4">
-                            <div class="card-body">Jumlah Siswa: 350</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-success text-white mb-4">
-                            <div class="card-body">Jumlah Guru: 42</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-warning text-white mb-4">
-                            <div class="card-body">Rata-rata Nilai: 84</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-danger text-white mb-4">
-                            <div class="card-body">Kehadiran Hari Ini: 96%</div>
-                        </div>
-                    </div>
+             <main class="container py-5">
+    <div class="card shadow-lg">
+        <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+            <h3 class="mb-0">Laporan Akademik Siswa</h3>
+        </div>
+        <div class="card-body">
+            <!-- Filter Kelas -->
+            <div class="row mb-4 align-items-end">
+                <div class="col-md-2">
+                    <label for="kelasFilter" class="form-label fw-bold">Pilih Kelas</label>
                 </div>
-                        <div class="row">
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-area me-1"></i>
-                                        Area Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-bar me-1"></i>
-                                        Bar Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
-                        </div>
-                       
-                    </div>
-                </main>
+                <div class="col-md-4">
+                    <select id="kelasFilter" class="form-select">
+                        <option value="all">Semua Kelas</option>
+                        <option value="Kelas 1">Kelas 1</option>
+                        <option value="Kelas 2">Kelas 2</option>
+                        <option value="Kelas 3">Kelas 3</option>
+                        <option value="Kelas 4">Kelas 4</option>
+                    </select>
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-primary w-100" id="filterButton">Terapkan</button>
+                </div>
+            </div>
+
+            <!-- Tabel Laporan Akademik -->
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover align-middle text-center">
+                    <thead class="table-light">
+                        <tr>
+                            <th>No</th>
+                            <th>Nama Siswa</th>
+                            <th>Kelas</th>
+                            <th>Nilai Akademik</th>
+                            <th>Kehadiran</th>
+                            <th>Rata-rata</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr data-kelas="Kelas 1">
+                            <td>1</td>
+                            <td>Ahmad</td>
+                            <td>Kelas 1</td>
+                            <td>85</td>
+                            <td>90%</td>
+                            <td>87.5</td>
+                        </tr>
+                        <tr data-kelas="Kelas 2">
+                            <td>2</td>
+                            <td>Rina</td>
+                            <td>Kelas 2</td>
+                            <td>78</td>
+                            <td>88%</td>
+                            <td>83.0</td>
+                        </tr>
+                        <tr data-kelas="Kelas 3">
+                            <td>3</td>
+                            <td>Joko</td>
+                            <td>Kelas 3</td>
+                            <td>92</td>
+                            <td>95%</td>
+                            <td>93.5</td>
+                        </tr>
+                        <tr data-kelas="Kelas 4">
+                            <td>4</td>
+                            <td>Maria</td>
+                            <td>Kelas 4</td>
+                            <td>80</td>
+                            <td>85%</td>
+                            <td>82.5</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</main>
+
+<script>
+    document.getElementById('filterButton').addEventListener('click', function () {
+        const selected = document.getElementById('kelasFilter').value;
+        const rows = document.querySelectorAll('table tbody tr');
+        rows.forEach(row => {
+            const kelas = row.getAttribute('data-kelas');
+            if (selected === 'all' || kelas === selected) {
+                row.style.display = '';
+            } else {
+                row.style.display = 'none';
+            }
+        });
+    });
+</script>
+
+
+<!-- Bootstrap JS dan dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
