--- a/dashboard/kepala_sekolah/r_a_guru_d_siswa.html
+++ b/dashboard/kepala_sekolah/r_a_guru_d_siswa.html
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </nav>
-        <div id="layoutSidenav">
+      <div id="layoutSidenav">
             <div id="layoutSidenav_nav">
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
@@ -82,57 +82,119 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
-                        <h1 class="mt-4">Dashboard</h1>
-                        <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Dashboard</li>
-                        </ol>
-                        <div class="row">
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-primary text-white mb-4">
-                            <div class="card-body">Jumlah Siswa: 350</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-success text-white mb-4">
-                            <div class="card-body">Jumlah Guru: 42</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-warning text-white mb-4">
-                            <div class="card-body">Rata-rata Nilai: 84</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-danger text-white mb-4">
-                            <div class="card-body">Kehadiran Hari Ini: 96%</div>
-                        </div>
-                    </div>
+           <main class="container py-5">
+    <div class="card shadow-lg">
+        <div class="card-header bg-primary text-white">
+            <h3>Rekap Absensi</h3>
+        </div>
+        <div class="card-body">
+            <!-- Menu Pilihan Absensi -->
+            <div class="mb-4">
+                <h5>Menu Rekap Absensi</h5>
+                <div class="d-flex">
+                    <button class="btn btn-info me-3" id="rekapAbsensiGuru">Rekap Absensi Guru</button>
+                    <button class="btn btn-warning" id="rekapAbsensiSiswa">Rekap Absensi Siswa</button>
                 </div>
-                        <div class="row">
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-area me-1"></i>
-                                        Area Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-bar me-1"></i>
-                                        Bar Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
-                        </div>
-                       
-                    </div>
-                </main>
+            </div>
+
+            <!-- Tabel Rekap Absensi Guru -->
+            <div id="guruAbsensi" class="table-responsive" style="display: none;">
+                <h5>Rekap Absensi Guru</h5>
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>Nama Guru</th>
+                            <th>Tanggal</th>
+                            <th>Waktu Masuk</th>
+                            <th>Waktu Keluar</th>
+                            <th>Keterangan</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>John Doe</td>
+                            <td>2025-05-10</td>
+                            <td>07:30</td>
+                            <td>15:30</td>
+                            <td>Hadir</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Alice Smith</td>
+                            <td>2025-05-10</td>
+                            <td>07:45</td>
+                            <td>15:45</td>
+                            <td>Hadir</td>
+                        </tr>
+                        <!-- Data absensi guru lainnya -->
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Tabel Rekap Absensi Siswa -->
+            <div id="siswaAbsensi" class="table-responsive" style="display: none;">
+                <h5>Rekap Absensi Siswa</h5>
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>Nama Siswa</th>
+                            <th>Kelas</th>
+                            <th>Tanggal</th>
+                            <th>Waktu Masuk</th>
+                            <th>Waktu Keluar</th>
+                            <th>Keterangan</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Ahmad</td>
+                            <td>Kelas 1</td>
+                            <td>2025-05-10</td>
+                            <td>07:30</td>
+                            <td>15:30</td>
+                            <td>Hadir</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Rina</td>
+                            <td>Kelas 2</td>
+                            <td>2025-05-10</td>
+                            <td>07:40</td>
+                            <td>15:40</td>
+                            <td>Hadir</td>
+                        </tr>
+                        <!-- Data absensi siswa lainnya -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</main>
+
+<!-- Bootstrap JS dan dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Script untuk mengubah tampilan tabel sesuai pilihan -->
+<script>
+    document.getElementById('rekapAbsensiGuru').addEventListener('click', function() {
+        document.getElementById('guruAbsensi').style.display = 'block';
+        document.getElementById('siswaAbsensi').style.display = 'none';
+    });
+
+    document.getElementById('rekapAbsensiSiswa').addEventListener('click', function() {
+        document.getElementById('guruAbsensi').style.display = 'none';
+        document.getElementById('siswaAbsensi').style.display = 'block';
+    });
+</script>
+
+
+<!-- Bootstrap JS dan dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
